--- a/ios-config.json
+++ b/ios-config.json
@@ -1,18 +1,18 @@
 {
   "config": {
-    "version": "v44",
+    "version": "v1",
     "release_config_timeout": 10000,
     "package_timeout": 10000,
     "properties": {}
   },
   "package": {
     "name": "Hyperswitch_SDK",
-    "version": "v45.0.7",
+    "version": "v1",
     "properties": {
       "manifest": {},
       "manifest_hash": {}
     },
-    "index": "http://localhost:3000/files/ios/bundle-v45_0_6.zip",
+    "index": "http://10.100.13.194:3000/files/ios/bundle-v2.zip",
     "splits": []
   },
   "resources": {}
